# Projekt_4

./: CMakeLists.txt  README.md  projekt.cpp  setup.bat  task.json
Raport/: oddanie_projektu_4.md
